--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
             animation: fadeIn 0.4s;
         }
 
+        /* YENİ: Katsayı Alanı Stili */
+        #katsayiAlani {
+            margin-top: 15px;
+            padding-top: 15px;
+            border-top: 1px dashed #2ea77f;
+            text-align: left;
+        }
+
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
@@ -161,6 +169,13 @@
             <div id="sonucAlani" style="margin-top: 20px; padding: 15px; background-color: #e8f5e9; border-left: 4px solid #2ea77f; border-radius: 4px; display: none;">
                 <h3 style="margin-top: 0; color: #2ea77f;">Hesaplama Sonucu</h3>
                 <p id="sonucMetni" style="font-size: 18px; font-weight: bold; margin: 0;"></p>
+                
+                <div id="katsayiAlani" style="display:none;">
+                    <label style="font-size: 13px; font-weight: bold;">Aktivite Katsayısı (1.0 - 2.0):</label>
+                    <input type="number" id="katsayiInput" value="1.0" step="0.1" min="1" max="2" 
+                           style="width: 60px; padding: 5px; margin-left: 10px;" oninput="katsayiIleCarp()">
+                    <p id="carpimSonucu" style="margin-top: 10px; font-size: 18px; color: #1b5e20; font-weight: bold;"></p>
+                </div>
             </div>
 
             <button style="background-color: #ccc; color: #333; margin-top: 20px;" onclick="geriDon()">← Bilgileri Düzenle</button>
@@ -168,9 +183,8 @@
     </div>
 
     <script>
-        // ==========================================
-        // 1. YARDIMCI MATEMATİK FONKSİYONLARI
-        // ==========================================
+        // Global değişken: BMH sonucunu saklamak için
+        let aktifBMH = 0;
 
         // 1. Harris-Benedict (BMH)
         const harrisBenedictHesapla = (cinsiyet, kilo, boy, yas) => {
@@ -235,9 +249,13 @@
             };
         };
 
-        // ==========================================
-        // 2. ANA KONTROL FONKSİYONU
-        // ==========================================
+        // Yeni: Katsayı ile çarpım yapan fonksiyon
+        function katsayiIleCarp() {
+            let katsayi = parseFloat(document.getElementById('katsayiInput').value);
+            if(isNaN(katsayi)) katsayi = 1;
+            let sonuc = aktifBMH * katsayi;
+            document.getElementById('carpimSonucu').innerText = "Toplam Gereksinim: " + sonuc.toFixed(0) + " kcal/gün";
+        }
 
         function hesaplamaYap(hesapTipi) {
             let cinsiyet = document.getElementById('cinsiyet').value;
@@ -247,32 +265,26 @@
 
             let sonucMetni = document.getElementById('sonucMetni');
             let sonucAlani = document.getElementById('sonucAlani');
+            let katsayiAlani = document.getElementById('katsayiAlani');
 
-            if (hesapTipi === 1) {
-                let sonuc = harrisBenedictHesapla(cinsiyet, kilo, boy, yas);
-                sonucMetni.innerText = "Harris-Benedict (BMH): " + sonuc.toFixed(0) + " kcal/gün";
-                sonucAlani.style.display = 'block';
+            // BKİ dışındaki tüm hesaplamalar BMH (Kalori) döndürür
+            if (hesapTipi <= 3) {
+                if (hesapTipi === 1) aktifBMH = harrisBenedictHesapla(cinsiyet, kilo, boy, yas);
+                else if (hesapTipi === 2) aktifBMH = mifflinStJeorHesapla(cinsiyet, kilo, boy, yas);
+                else if (hesapTipi === 3) aktifBMH = schofieldHesapla(cinsiyet, kilo, yas);
+                
+                sonucMetni.innerText = "Bazal Metabolizma (BMH): " + aktifBMH.toFixed(0) + " kcal/gün";
+                katsayiAlani.style.display = 'block';
+                katsayiIleCarp(); // İlk açılışta 1.0 ile çarpıp göster
             } 
-            else if (hesapTipi === 2) {
-                let sonuc = mifflinStJeorHesapla(cinsiyet, kilo, boy, yas);
-                sonucMetni.innerText = "Mifflin-St Jeor (BMH): " + sonuc.toFixed(0) + " kcal/gün";
-                sonucAlani.style.display = 'block';
-            }
-            else if (hesapTipi === 3) {
-                let sonuc = schofieldHesapla(cinsiyet, kilo, yas);
-                sonucMetni.innerText = "Schofield (BMH): " + sonuc.toFixed(0) + " kcal/gün";
-                sonucAlani.style.display = 'block';
-            }
             else if (hesapTipi === 4) {
                 let sonuc = bkiHesapla(kilo, boy);
                 sonucMetni.innerHTML = "BKİ Değeri: " + sonuc.deger + "<br><span style='font-size:15px; color:#555;'>Durum: " + sonuc.kategori + "</span>";
-                sonucAlani.style.display = 'block';
+                katsayiAlani.style.display = 'none'; // BKİ'de katsayıya gerek yok
             }
+            sonucAlani.style.display = 'block';
         }
 
-        // ==========================================
-        // 3. EKRAN GEÇİŞ KONTROLLERİ
-        // ==========================================
         document.getElementById('hastaFormu').addEventListener('submit', function(event) {
             event.preventDefault(); 
             document.getElementById('screen-input').classList.remove('active');
